# probe

./: .gitignore  CLAUDE.md  LICENSE  README.md  versions.toml
.claude/: team.config.json
.github/workflows/: api-dump.yml  ci.yml  develop-sync-check.yml  release-backmerge.yml  release-prepare.yml  release-publish.yml
android/: settings.gradle.kts
android/gradle/: libs.versions.toml
android/plugin/: build.gradle.kts
android/sample/: build.gradle.kts
android/sample/src/main/: AndroidManifest.xml
cli/: Cargo.toml
cli/src/: buffer.rs  control.rs  control_client.rs  display.rs  filter.rs  lib.rs  main.rs  mock.rs  protocol.rs  query.rs  server.rs  version.rs
cli/tests/: control.rs  e2e.rs  integration.rs  pretty_gate.rs  version_guard.rs
docs/: integration-guide.md
scripts/: determine-version.sh  release-plan
scripts/test/: release-plan.test.sh
sdk/android/: build.gradle.kts  settings.gradle.kts
sdk/android/bom/: build.gradle.kts
sdk/android/buildSrc/: build.gradle.kts  settings.gradle.kts
sdk/android/core/: build.gradle.kts
sdk/android/core/api/: core.api
sdk/android/gradle/: libs.versions.toml
sdk/android/plugin-db/: build.gradle.kts
sdk/android/plugin-db/api/: plugin-db.api
sdk/android/plugin-layout/: build.gradle.kts
sdk/android/plugin-layout/api/: plugin-layout.api
sdk/android/plugin-network/: build.gradle.kts
sdk/android/plugin-prefs/: build.gradle.kts
sdk/android/sample/: build.gradle.kts
sdk/aurora/: README.md
sdk/flutter/probe_flutter/: pubspec.yaml
sdk/ios/: Package.swift  README.md
(+110 files in other folders)
