[package]
name = "probe"
version = "0.1.0"
edition = "2021"
description = "Plugin-based mobile app inspector for debugging AI agents — CLI tool"
authors = ["Andrey Vladislavov <and.vladislavov@gmail.com>"]
license = "MIT"
repository = "https://github.com/AndVl1/probe"
keywords = ["debugging", "network", "inspector", "mobile"]
categories = ["development-tools::debugging", "command-line-utilities"]

[[bin]]
name = "probe"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
regex = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
